move: Rename file

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -23,7 +23,7 @@ $se: 350px;         // iphone SE用
     }
 }
 
-/***** CSSの初期設定 *****/
+/***** ベース *****/
 body {
     font-family: $fontJP;
     font-weight: 300;
