update: Change body to grid layout

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -4,7 +4,9 @@
 
 /* ベース */
 body {
+  display: grid;
+  gap: 80px;
+  background: $colorBase;
   @include font(jp, 0);
   color: $colorWhite;
-  background: $colorBase;
 }
