--- a/scss/_init.scss
+++ b/scss/_init.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 /* 変数・関数定義 */
-$colorBase: #424c66;
+$colorBase: #293040;
 $colorMain: #f0f0f0;
 $colorAccent: #e1eb7b;
 $colorBlack: #303030;
