--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -8,7 +8,10 @@
   grid-template-rows: 1fr auto;
   gap: 10px;
 
-  &__image {
+  &__image-container {
+    position: relative;
+    overflow: hidden;
+    border: 1px solid $colorMain;
     border-radius: 6px;
     background-color: $colorMain;
     transition: .3s;
@@ -17,5 +20,15 @@
       transform: translateY(-2px);
       box-shadow: #00000080 0px 20px 30px -10px;
     }
+    &::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      box-shadow: inset 0 0 20px 0 #00000080;
+    }
+  }
+
+  &__image {
+    width: 100%;
   }
 }
