--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -51,6 +51,10 @@
     top: 25%;
     left: 70%;
     width: 3%;
+    @include mediaQuery() {
+      top: 50%;
+      width: 10%;
+    }
   }
 
   &__moon {
@@ -71,6 +75,9 @@
     flex-shrink: 0;
     width: 150%;
     animation: horizontalLoop 250s linear infinite;
+    @include mediaQuery() {
+      width: 150% * 2;
+    }
   }
 
   /* skyline-container */
@@ -82,20 +89,32 @@
     &._layer-3 {
       bottom: -10vw;
       animation: verticalEnter 2s .5s both;
+      @include mediaQuery() {
+        bottom: -10vw * 2;
+      }
     }
     &._layer-2 {
       bottom: -16vw;
       animation: verticalEnter 2s .25s both;
+      @include mediaQuery() {
+        bottom: -16vw * 2;
+      }
     }
     &._layer-1 {
       bottom: -20vw;
       animation: verticalEnter 2s both;
+      @include mediaQuery() {
+        bottom: -20vw * 2;
+      }
     }
   }
 
   &__skyline {
     flex-shrink: 0;
     width: 150%;
+    @include mediaQuery() {
+      width: 150% * 2;
+    }
 
     &._layer-3 {
       animation: horizontalLoop 150s -20s linear infinite;
