--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -15,11 +15,14 @@
     border-radius: 6px;
     background-color: $colorMain;
     transition: .3s;
-    &:hover {
-      cursor: pointer;
-      transform: translateY(-2px);
-      box-shadow: #00000080 0px 20px 30px -10px;
+    @include hover {
+      &:hover {
+        cursor: pointer;
+        transform: translateY(-2px);
+        box-shadow: #00000080 0px 20px 30px -10px;
+      }
     }
+
     &::after {
       content: "";
       position: absolute;
