--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,6 +2,13 @@
 
 @import "init";
 
+@keyframes logoEnter {
+  to {
+    opacity: 1;
+    transform: translateX(-50%) scale(1);
+  }
+}
+
 @keyframes horizontalLoop {
   to {
     transform: translateX(-100%);
@@ -30,13 +37,23 @@
   /* logo-container */
   &__logo-container {
     position: absolute;
-    top: 40%;
+    top: 20%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    width: 65%;
+    opacity: 0;
+    transform: translateX(-50%) scale(.95);
     text-align: center;
+    animation: logoEnter 2s .5s both;
+  }
+
+  &__nh {
+    width: 100%;
+    max-width: 400px;
+    max-height: 50vh;
   }
 
   &__logo {
+    margin-top: 30px;
     @include font(en, 1);
     font-size: 40px;
   }
