update: Update subtitle style

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -58,9 +58,8 @@
     font-size: 40px;
   }
 
-  &__subtitle {
-    letter-spacing: 10px;
-  }
+  // &__subtitle {
+  // }
 
   /* moon-cotainer */
   &__moon-container {
