--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -49,6 +49,7 @@
   &__nh {
     width: 100%;
     max-width: 400px;
+    height: 0%;
     max-height: 50vh;
   }
 
@@ -75,6 +76,7 @@
 
   &__moon {
     width: 100%;
+    height: 0%;
     transform: translateY(100%) scale(2);
     animation: moonEnter 2.5s both;
   }
@@ -88,8 +90,8 @@
   }
 
   &__cloud {
-    flex-shrink: 0;
     width: 300%;
+    height: 0%;
     animation: horizontalLoop 250s linear infinite;
     @include landscape {
       width: (300% / 2);
@@ -126,8 +128,8 @@
   }
 
   &__skyline {
-    flex-shrink: 0;
     width: 300%;
+    height: 0%;
     @include landscape {
       width: (300% / 2);
     }
