fix: Change links-container in share from flex to gird
Flexboxでのgapプロパティのサポートはまだ少ない。

--- a/scss/_share.scss
+++ b/scss/_share.scss
@@ -23,7 +23,8 @@
   }
 
   &__links-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 30px;
     gap: 30px;
     padding: 15px 40px;
