--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -31,16 +31,23 @@
         box-shadow: #00000080 0px 20px 30px -10px;
       }
     }
-
-    &::after {
-      content: "";
-      position: absolute;
-      inset: 0;
-      box-shadow: inset 0 0 20px 0 #00000080;
-    }
   }
 
   &__image {
     width: 100%;
+  }
+
+  &__image-inset-shadow {
+    position: absolute;
+    inset: 0;
+    box-shadow: inset 0 0 20px 0 #00000080;
+  }
+
+  &__external-link-icon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 10px 10px 0 0;
+    filter: drop-shadow(0 0 3px #00000080);
   }
 }
