--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -4,15 +4,8 @@
 
 /* フッタ */
 .footer {
-  position: relative;
+  @include flexCentering;
   height: 200px;
   color: $colorBlack;
   background-color: $colorMain;
-
-  &__container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
 }
