refactor: Add color variables for gensokanji

--- a/assets/scss/global/_variable.scss
+++ b/assets/scss/global/_variable.scss
@@ -1,4 +1,9 @@
 /* 色 */
+$colorGensokanjiMidnight: #293040;
+$colorGensokanjiNavy: #424c66;
+$colorGensokanjiSlate: #758ba3;
+$colorGensokanjiSteel: #a6bbca;
+
 $colorTwitter: #55acee;
 $colorFacebook: #315096;
 $colorLINE: #00c300;
