--- a/assets/scss/utility/_text.scss
+++ b/assets/scss/utility/_text.scss
@@ -1,26 +1,34 @@
 /* text */
 @use '@/assets/scss/global' as g;
-@use '@/assets/scss/global/periodic-table' as p;
+@use '@/assets/scss/global/periodic-table' as pt;
+@use '@/assets/scss/global/gensokanji' as gk;
 
 .u-bold {
   @include g.font(ja, bold);
 }
 
 .u-marker {
-  background: linear-gradient(transparent 70%, p.$colorAccent 70%);
+  background: linear-gradient(transparent 70%, pt.$colorAccent 70%);
 }
 
 .u-marker-bold {
   @include g.font(ja, bold);
-  background: linear-gradient(transparent 70%, p.$colorAccent 70%);
+  background: linear-gradient(transparent 70%, pt.$colorAccent 70%);
 }
 
 .u-link {
   cursor: pointer;
   text-decoration: underline;
   transition: color 0.2s;
-  &:hover {
-    color: p.$colorBlackA;
+  &--gk {
+    &:hover {
+      color: gk.$colorWhiteA;
+    }
+  }
+  &--pt {
+    &:hover {
+      color: pt.$colorBlackA;
+    }
   }
 }
 
